[gd_scene load_steps=10 format=3 uid="uid://c6y3girgbbcdm"]

[ext_resource type="Script" path="res://code/nav_mesh_test.gd" id="1_e3qy7"]
[ext_resource type="PackedScene" uid="uid://w8sn0822ekij" path="res://scenes/multiplayer_test.tscn" id="2_dpp3d"]
[ext_resource type="Script" path="res://code/enemy_navmesh.gd" id="3_eeh4v"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_wbrkf"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_5rafg"]
sky_material = SubResource("ProceduralSkyMaterial_wbrkf")

[sub_resource type="Environment" id="Environment_31kiw"]
background_mode = 2
sky = SubResource("Sky_5rafg")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="NavigationMesh" id="NavigationMesh_ymsm7"]
geometry_parsed_geometry_type = 1
vertices_per_polygon = 12.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4l7pp"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_yd6ge"]

[node name="navmesh" type="Node3D"]
script = ExtResource("1_e3qy7")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_31kiw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navigation_mesh = SubResource("NavigationMesh_ymsm7")

[node name="wall_spawner" type="Node3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="spawner1" type="Node3D" parent="NavigationRegion3D/wall_spawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.77037)

[node name="spawner2" type="Node3D" parent="NavigationRegion3D/wall_spawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.77513)

[node name="prop_spawner" type="Node3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="spawner1" type="Node3D" parent="NavigationRegion3D/prop_spawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.2816, 0, 0)

[node name="spawner2" type="Node3D" parent="NavigationRegion3D/prop_spawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.99644, 0, 0)

[node name="spawner3" type="Node3D" parent="NavigationRegion3D/prop_spawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.975723, 0, -2.76299)

[node name="floor_spawner" type="Node3D" parent="NavigationRegion3D"]

[node name="multiplayer_test" parent="." instance=ExtResource("2_dpp3d")]

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -11.335)
script = ExtResource("3_eeh4v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("CapsuleShape3D_4l7pp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D"]
mesh = SubResource("CapsuleMesh_yd6ge")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="CharacterBody3D"]

[node name="RayCast3D" type="RayCast3D" parent="CharacterBody3D"]
target_position = Vector3(0, 0, -20)
